--- a/logstash.conf
+++ b/logstash.conf
@@ -5,7 +5,6 @@ input {
 }
 
 filter {
-  # 解析 Pino 日誌中的 JSON 格式
   json {
     source => "message"
   }
@@ -27,30 +26,31 @@ filter {
     ]
   }
 
-  # 格式化時間戳，從 Unix 時間戳轉換為標準日期格式
-  date {
-    match => [ "time", "UNIX_MS" ]
-    target => "time"
-  }
+  
 
-  # 刪除不需要的字段
-  mutate {
-    remove_field => ["pid", "hostname", "@version", "host"]
-  }
-
-  # 添加新的字段或嵌套結構
-  mutate {
-    add_field => {
-      "[http][method]" => "%{[req][method]}"
-      "[http][url]" => "%{[req][url]}"
-      "[http][status_code]" => "%{[res][statusCode]}"
+  # 假設 rect-game 的時間戳也使用 UNIX_MS 格式
+  if [fields][log_type] == "rect-game" {
+    date {
+      match => [ "time", "UNIX_MS" ]
+      target => "time"
     }
+    
+
+    # #可以添加或移除字段根據具體需求
+    # mutate {
+    #   remove_field => ["@version", "host"]
+    # }
   }
 
-  # 刪除原始的 req 和 res
-  mutate {
-    remove_field => ["req", "res"]
-  }
+  # # 添加新的字段或嵌套結構
+  # mutate {
+  #   add_field => {
+  #     "[http][method]" => "%{[req][method]}"
+  #     "[http][url]" => "%{[req][url]}"
+  #     "[http][status_code]" => "%{[res][statusCode]}"
+  #   }
+  # }
+  
 }
 
 output {
@@ -58,7 +58,7 @@ output {
     hosts => ["http://elasticsearch:9200"]
     user => "elastic"
     password => "changeme"
-    index => "http-requests-%{+YYYY.MM.dd}"
+    index => "%{[fields][log_type]}-%{+YYYY.MM.dd}"  # 根據 log_type 動態設定索引名稱
   }
   stdout { codec => rubydebug }
 }
