--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Node.js app with logging",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "pino": "^9.3.2",
-    "pino-http": "^10.2.0"
+    "pino-http": "^10.2.0",
+    "socket.io": "^4.7.5"
   }
 }
